Manage import and update the liste of the logements

--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -10,7 +10,7 @@
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-lg-11 fr-col-offset-lg-1 fr-my-5w">
                     {% if request.user.is_bailleur %}
-                        <h2 class="fr-mb-3w">Modifiez un projet de convention en cours ou créez une nouvelle convention</h2>
+                        <h2 class="fr-mb-3w">Créez une nouvelle convention ou gérez vos conventions en cours</h2>
 
                         <h4 class="fr-mb-3w">
                             Commencer une nouvelle convention dès à présent
