--- a/templates/conventions/step7.html
+++ b/templates/conventions/step7.html
@@ -3,19 +3,110 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         <div class="fr-container">
-            <div class="fr-grid-row fr-grid-row--gutters">
-                <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-                    <h2 class="fr-mb-3w">Etape 7/{{ nb_steps }} - Annexes</h2>
-                    <p class="fr-mb-3w">
-                        ...
-                    </p>
+            <form method="post" action="" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="fr-grid-row fr-grid-row--gutters">
+                    <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
+                        <h2>Etape 7/{{ nb_steps }} - Annexes</h2>
+                        {% include "common/convention_edit_info.html" with convention=convention %}
+                        {% include "common/mandatory_fields_info.html" %}
+
+                        {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='annexes' upform=upform  what='annexes'%}
+
+                        <hr class="fr-col-12 fr-my-3w">
+
+                        {% for error in import_warnings %}
+                            <p id="text-input-error-desc-error" class="fr-error-text">
+                                {{ error }}
+                            </p>
+                        {% endfor %}
+
+                        {% for error in formset.non_form_errors %}
+                            <p id="text-input-error-desc-error" class="fr-error-text">
+                                {{ error }}
+                            </p>
+                        {% endfor %}
+
+                        {{ formset.management_form }}
+                        <div class="fr-table fr-table--bordered">
+                            <table>
+                                <caption>Liste des annexes associés aux logements</caption>
+
+                                <thead>
+                                    <tr>
+                                        <th scope="col" style='min-width:150px;'>Type d'annexe {% include "common/mandatory_field.html" %}</th>
+                                        <th scope="col" style='min-width:200px;'>Désignation des logements {% include "common/mandatory_field.html" %}</th>
+                                        <th scope="col" style='min-width:150px;'>Typologie des logements {% include "common/mandatory_field.html" %}</th>
+                                        <th scope="col" style='min-width:120px;'>Surface de l'annexe {% include "common/mandatory_field.html" %}</th>
+                                        <th scope="col" style='min-width:120px;'>Loyer unitaire en € {% include "common/mandatory_field.html" %}</th>
+                                        <th scope="col" style='min-width:120px;'>Loyer maxinum du logement en € {% include "common/mandatory_field.html" %}</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for form in formset %}
+                                        <tr>
+                                            <td>
+                                                <select
+                                                    class="fr-select {% if form.typologie.errors %}fr-select--error{% endif %}"
+                                                    id="{{form.typologie.id_for_label}}"
+                                                    name="{{form.typologie.html_name}}">
+                                                    <option value="" {% if not form.typologie.value %}selected{% endif %} disabled hidden></option>
+                                                    {% for typologie in typologies %}
+                                                        <option value="{{typologie.value}}"
+                                                            {% if typologie.value  == form.typologie.value %}selected{% endif %}>
+                                                            {{typologie.label}}
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                                {% for error in form.typologie.errors %}
+                                                    <p id="select-error-desc-error" class="fr-error-text">
+                                                        {{ error }}
+                                                    </p>
+                                                {% endfor %}
+                                            </td>
+                                            <td>
+                                                {% include "common/form/input_text.html" with form_input=form.logement_designation %}
+                                            </td>
+                                            <td>
+                                                <select
+                                                    class="fr-select {% if form.logement_typologie.errors %}fr-select--error{% endif %}"
+                                                    id="{{form.logement_typologie.id_for_label}}"
+                                                    name="{{form.logement_typologie.html_name}}">
+                                                    <option value="" {% if not form.logement_typologie.value %}selected{% endif %} disabled hidden></option>
+                                                    {% for logement_typologie in logement_typologies %}
+                                                        <option value="{{logement_typologie.value}}"
+                                                            {% if logement_typologie.value  == form.logement_typologie.value %}selected{% endif %}>
+                                                            {{logement_typologie.label}}
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                                {% for error in form.logement_typologie.errors %}
+                                                    <p id="select-error-desc-error" class="fr-error-text">
+                                                        {{ error }}
+                                                    </p>
+                                                {% endfor %}
+                                            </td>
+                                            <td>
+                                                {% include "common/form/input_number.html" with form_input=form.surface_hors_surface_retenue step="0.01" %}
+                                            </td>
+                                            <td>
+                                                {% include "common/form/input_number.html" with form_input=form.loyer_par_metre_carre step="0.01" %}
+                                            </td>
+                                            <td>
+                                                {% include "common/form/input_number.html" with form_input=form.loyer step="0.01" %}
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
-                {% include "common/button/precedent.html" with precedent='conventions:step6' convention_uuid=convention_uuid %}
-                {% include "common/button/suivant.html" with suivant='conventions:step8' convention_uuid=convention_uuid %}
-            </div>
+                <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
+                    {% include "common/button/precedent.html" with precedent='conventions:step6' convention_uuid=convention.uuid %}
+                    {% include "common/button/suivant.html" with suivant='conventions:step7' convention_uuid=convention.uuid %}
+                </div>
+            </form>
         </div>
     </div>
-    <hr class="fr-grid-row fr-col-xs-10 fr-col-7 fr-my-7w">
 {% endblock %}
