--- a/templates/common/form/input_upload_button.html
+++ b/templates/common/form/input_upload_button.html
@@ -2,5 +2,7 @@
     <button class="fr-btn fr-btn--secondary fr-text--sm" onclick="" disabled title='fonctionnalité bientôt disponible'>
         <span class="fr-fi-download-line fr-mr-1w fr-fi--sm" aria-hidden="true"></span>Téléversez une image
     </button>
-    <i class="fr-text--sm">ou remplissez le champ ci-dessous</i>
+    {% if textarea %}
+        <i class="fr-text--sm">ou remplissez le champ ci-dessous</i>
+    {% endif %}
 </div>
