--- a/templates/common/form/input_number.html
+++ b/templates/common/form/input_number.html
@@ -1,3 +1,5 @@
+
+{% load l10n %}
 <input
     class="fr-input {% if form_input.errors %}fr-input--error{% endif %}"
     pattern="[0-9]*"
@@ -8,7 +10,7 @@
     type="number"
     id="{{form_input.id_for_label}}"
     name="{{form_input.html_name}}"
-    value="{{ form_input.value|default_if_none:'' }}">
+    value="{{ form_input.value|unlocalize|default_if_none:'' }}">
 {% for error in form_input.errors %}
     <p id="text-input-error-desc-error" class="fr-error-text">
         {{ error }}
