--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -44,10 +44,15 @@
                                             <span class="fr-fi-close-circle-line fr-mr-1w" aria-hidden="true"></span>Déconnexion
                                         </button>
                                     </li>
+                                    <li>
+                                        <a class="fr-link" href="//docs.appel.beta.gouv.fr" target="_blank">
+                                            <span class="fr-fi-question-line" aria-hidden="true"></span>
+                                        </a>
+                                    </li>
                                 </ul>
                             {% else %}
-                                <ul class="fr-btns-group fr-btns-group--inline">
-                                    <li>
+                                <ul class="fr-links-group">
+                                    <li class="fr-mx-3w">
                                         {% include "common/button/login.html" %}
                                     </li>
                                     <li>
@@ -55,6 +60,11 @@
                                             <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
                                             </span>Espace instructeur
                                         </button>
+                                    </li>
+                                    <li>
+                                        <a class="fr-link" href="//docs.appel.beta.gouv.fr" target="_blank">
+                                            <span class="fr-fi-question-line" aria-hidden="true"></span>
+                                        </a>
                                     </li>
                                 </ul>
                             {% endif %}
