--- a/templates/conventions/step10.html
+++ b/templates/conventions/step10.html
@@ -317,12 +317,15 @@
             <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
                 {% include "common/button/precedent.html" with precedent='conventions:step9' convention_uuid=convention.uuid %}
                 <div>
-                    <button class="fr-btn fr-btn--secondary" onclick="location.href='{% url 'conventions:index' %}'">
-                        Enregistrer le Brouillon
-                    </button>
-                    <button class="fr-btn" onclick="location.href='{% url 'conventions:index' %}'">
-                        Soumettre au service instructeur
-                    </button>
+                    <form method="post" action="" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <button class="fr-btn fr-btn--secondary">
+                            Enregistrer le Brouillon
+                        </button>
+                        <button name="SubmitConvention" value=True class="fr-btn">
+                            Soumettre au service instructeur
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
