Manage step 10 enhancement and first draft to download HLM convention

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,3 +13,15 @@
 .warning-notification {
   color: #E10600;
 }
+
+.table--limited-height {
+  max-height:400px;
+  overflow-y: auto;
+}
+
+.button-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
