--- a/templates/conventions/step3.html
+++ b/templates/conventions/step3.html
@@ -141,7 +141,7 @@
 
                     </div>
                 </div>
-                <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
+                <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w button-bar">
                     {% include "common/button/precedent.html" with precedent='conventions:step2' convention_uuid=convention.uuid %}
                     {% include "common/button/suivant.html" with suivant='conventions:step3' convention_uuid=convention.uuid %}
                 </div>
