--- a/templates/conventions/step4.html
+++ b/templates/conventions/step4.html
@@ -1,7 +1,7 @@
 {% extends "layout/base.html" %}
 
 {% block content %}
-    <div class="fr-container-fluid ds_banner">
+    <div class="fr-container-fluid ds_banner fr-pb-1w">
         <div class="fr-container">
             <form method="post" action="" enctype="multipart/form-data">
                 {% csrf_token %}
@@ -166,7 +166,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
+
+                <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w button-bar">
                     {% include "common/button/precedent.html" with precedent='conventions:step3' convention_uuid=convention.uuid %}
                     {% include "common/button/suivant.html" with suivant='conventions:step4' convention_uuid=convention.uuid %}
                 </div>
