--- a/templates/conventions/step7.html
+++ b/templates/conventions/step7.html
@@ -1,7 +1,7 @@
 {% extends "layout/base.html" %}
 
 {% block content %}
-    <div class="fr-container-fluid ds_banner">
+    <div class="fr-container-fluid ds_banner fr-pb-1w">
         <div class="fr-container">
             <form method="post" action="" enctype="multipart/form-data">
                 {% csrf_token %}
