add a total row to the table of logement

--- a/templates/common/form/input_number.html
+++ b/templates/common/form/input_number.html
@@ -5,6 +5,7 @@
     pattern="[0-9]*"
     min=0
     step="{% if step %}{{step}}{% else %}1{% endif %}"
+    {% if onchange %}onchange="{{onchange}}"{% endif %}
     inputmode="numeric"
     {% if form_input.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
     type="number"
