center text in total td

--- a/templates/conventions/step6.html
+++ b/templates/conventions/step6.html
@@ -99,19 +99,19 @@
                                         </td>
                                         <td>
                                         </td>
-                                        <td id="total_sh" class="fr-text--lg text-center">
+                                        <td id="total_sh" class="fr-text--lg" style="text-align: center;">
                                         </td>
-                                        <td id="total_sa" class="fr-text--lg text-center">
+                                        <td id="total_sa" class="fr-text--lg" style="text-align: center;">
                                         </td>
-                                        <td id="total_sar" class="fr-text--lg text-center">
+                                        <td id="total_sar" class="fr-text--lg" style="text-align: center;">
                                         </td>
-                                        <td id="total_su" class="fr-text--lg text-center">
-                                        </td>
-                                        <td>
+                                        <td id="total_su" class="fr-text--lg" style="text-align: center;">
                                         </td>
                                         <td>
                                         </td>
-                                        <td id="total_loyer" class="fr-text--lg text-center">
+                                        <td>
+                                        </td>
+                                        <td id="total_loyer" class="fr-text--lg" style="text-align: center;">
                                         </td>
                                     </tr>
                                 </tbody>
