--- a/templates/conventions/step6.html
+++ b/templates/conventions/step6.html
@@ -29,7 +29,7 @@
 
                         {{ formset.management_form }}
                         <div class="fr-table fr-table--bordered">
-                            <table>
+                            <table id="lgts_table">
                                 <caption>Liste des logements associés à la convention</caption>
 
                                 <thead>
@@ -49,6 +49,11 @@
                                     {% for form in formset %}
                                         <tr>
                                             <td>
+                                                <input
+                                                    type="hidden"
+                                                    id="{{form.uuid.id_for_label}}"
+                                                    name="{{form.uuid.html_name}}"
+                                                    value="{{ form.uuid.value|default_if_none:'' }}">
                                                 {% include "common/form/input_text.html" with form_input=form.designation %}
                                             </td>
                                             <td>
@@ -70,17 +75,17 @@
                                                     </p>
                                                 {% endfor %}
                                             </td>
-                                            <td>
-                                                {% include "common/form/input_number.html" with form_input=form.surface_habitable step="0.01" %}
+                                            <td id="lgt_sh">
+                                                {% include "common/form/input_number.html" with form_input=form.surface_habitable step="0.01" onchange="compute_total_value('sh')" %}
                                             </td>
-                                            <td>
-                                                {% include "common/form/input_number.html" with form_input=form.surface_annexes step="0.01" %}
+                                            <td id="lgt_sa">
+                                                {% include "common/form/input_number.html" with form_input=form.surface_annexes step="0.01" onchange="compute_total_value('sa')" %}
                                             </td>
-                                            <td>
-                                                {% include "common/form/input_number.html" with form_input=form.surface_annexes_retenue step="0.01" %}
+                                            <td id="lgt_sar">
+                                                {% include "common/form/input_number.html" with form_input=form.surface_annexes_retenue step="0.01" onchange="compute_total_value('sar')" %}
                                             </td>
-                                            <td>
-                                                {% include "common/form/input_number.html" with form_input=form.surface_utile step="0.01" %}
+                                            <td id="lgt_su">
+                                                {% include "common/form/input_number.html" with form_input=form.surface_utile step="0.01" onchange="compute_total_value('su')" %}
                                             </td>
                                             <td>
                                                 {% include "common/form/input_number.html" with form_input=form.loyer_par_metre_carre step="0.01" %}
@@ -88,11 +93,32 @@
                                             <td>
                                                 {% include "common/form/input_number.html" with form_input=form.coeficient step="0.001" %}
                                             </td>
-                                            <td>
-                                                {% include "common/form/input_number.html" with form_input=form.loyer step="0.01" %}
+                                            <td id="lgt_loyer">
+                                                {% include "common/form/input_number.html" with form_input=form.loyer step="0.01" onchange="compute_total_value('loyer')" %}
                                             </td>
                                         </tr>
                                     {% endfor %}
+                                    <tr>
+                                        <td class="fr-text--lg">
+                                            Total
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td id="total_sh" class="fr-text--lg" style="text-align: center;">
+                                        </td>
+                                        <td id="total_sa" class="fr-text--lg" style="text-align: center;">
+                                        </td>
+                                        <td id="total_sar" class="fr-text--lg" style="text-align: center;">
+                                        </td>
+                                        <td id="total_su" class="fr-text--lg" style="text-align: center;">
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td id="total_loyer" class="fr-text--lg" style="text-align: center;">
+                                        </td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -105,4 +131,41 @@
             </form>
         </div>
     </div>
+    <script  type="text/javascript">
+        function compute_total_value(what){
+            elements = document.querySelectorAll('[id=lgt_' + what + ']');
+            total_value = 0;
+            for ( i =0, len = elements.length; i<len; i++) {
+                total_value = total_value + parseFloat(elements[i].getElementsByTagName('input')[0].value);
+            }
+            document.getElementById('total_' + what).innerHTML = "<span>" + total_value.toFixed(2).replace('.',',').replace(/\B(?=(\d{3})+(?!\d))/g, " ") + "</span>";
+        }
+        compute_total_value('sh')
+        compute_total_value('sa')
+        compute_total_value('sar')
+        compute_total_value('su')
+        compute_total_value('loyer')
+    </script>
+    <!-- <script  type="text/javascript">
+
+        var t = document.getElementById("lgts_table"),
+        tableRows = t.getElementsByTagName("tr")
+        for ( i =0, len = tableRows.length; i<len; i++) {
+            tds = tableRows[i].getElementById("lgt_loyer")
+            console.log(tds)
+        }
+
+
+
+
+
+        r = [], i, len, tds, j, jlen;
+
+        for ( i =0, len = tableRows.length; i<len; i++) {
+            tds = tableRows[i].getElementsById('td');
+    for( j = 0, jlen = tds.length; j < jlen; j++) {
+        r.push(tds[j]);
+    }
+}
+</script> -->
 {% endblock %}
