move nb_logments to lot

--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -60,7 +60,7 @@
                                         <td>{{convention.programme.nom}}</td>
                                         <td>{{convention.financement}}</td>
                                         <td>{{convention.programme.ville}}</td>
-                                        <td>{{convention.programme.nb_logements}}</td>
+                                        <td>{{convention.lot.nb_logements}}</td>
                                         <td>{{convention.get_statut_display}}</td>
                                         <td>
                                             {% if request.user.is_bailleur %}
