--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -7,7 +7,7 @@
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12 fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-                        <h2>Etape 2/{{ nb_steps }} - Identité du signataire</h2>
+                        <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Identité du signataire</h2>
                         {% include "common/convention_edit_info.html" with convention=convention %}
                         {% include "common/mandatory_fields_info.html" %}
 
@@ -37,12 +37,12 @@
                             </div>
                         </div>
 
-                        {% include "common/form/input_text.html" with form_input=form.dg_nom label="Nom du directeur général" mandatory=True %}
+                        {% include "common/form/input_text.html" with form_input=form.dg_nom label="Nom du signataire de la convention" mandatory=True %}
 
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.dg_fonction label="Fonction du directeur général" mandatory=True %}
+                                    {% include "common/form/input_text.html" with form_input=form.dg_fonction label="Fonction du signataire de la convention" mandatory=True %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
                                     {% include "common/form/input_date.html" with form_input=form.dg_date_deliberation label="Date de délibération" mandatory=True %}
@@ -53,8 +53,8 @@
                     </div>
                 </div>
                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
-                    {% include "common/button/precedent.html" with precedent='conventions:step1_update' convention_uuid=convention.uuid %}
-                    {% include "common/button/suivant.html" with suivant='conventions:step2' convention_uuid=convention.uuid %}
+                    {% include "common/button/precedent.html" with precedent='conventions:selection_update' convention_uuid=convention.uuid %}
+                    {% include "common/button/suivant.html" with suivant='conventions:bailleur' convention_uuid=convention.uuid %}
                 </div>
             </form>
         </div>
