--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -5,7 +5,7 @@
         <div class="fr-container">
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-                    <h2>Etape 10/{{ nb_steps }} - Récapitulatif</h2>
+                    <h2>Etape {{step}}/{{ nb_steps }} - Récapitulatif</h2>
                     {% include "common/convention_edit_info.html" with convention=convention %}
 
                     {% if not convention.is_submitted %}
@@ -25,7 +25,7 @@
                                     {% include "common/display_field_if_exists.html" with label="Nom du programme" value=programme.nom %}
                                     {% include "common/display_field_if_exists.html" with label="Financement" value=lot.financement %}
                                     {% include "common/display_field_if_exists.html" with label="Ville" value=programme.ville %}
-                                    {% include "common/display_field_if_exists.html" with label="Nombre de logements" value=lot.nb_logements %}
+                                    {% include "common/display_field_if_exists.html" with label="Nombre de logements à conventionner" value=lot.nb_logements %}
                                 </div>
                             </div>
                         </div>
@@ -39,8 +39,8 @@
                                     {% include "common/display_field_if_exists.html" with label="Adresse" value=bailleur.adresse %}
                                     {% include "common/display_field_if_exists.html" with label="Code postal" value=bailleur.code_postal %}
                                     {% include "common/display_field_if_exists.html" with label="Ville" value=bailleur.ville %}
-                                    {% include "common/display_field_if_exists.html" with label="Nom du directeur général" value=bailleur.dg_nom %}
-                                    {% include "common/display_field_if_exists.html" with label="Fonction du directeur général" value=bailleur.dg_fonction %}
+                                    {% include "common/display_field_if_exists.html" with label="Nom du signataire de la convention" value=bailleur.dg_nom %}
+                                    {% include "common/display_field_if_exists.html" with label="Fonction du signataire de la convention" value=bailleur.dg_fonction %}
                                     {% include "common/display_field_if_exists.html" with label="Date de délibération" value=bailleur.dg_date_deliberation %}
                                 </div>
                             </div>
@@ -53,7 +53,6 @@
                                     {% include "common/display_field_if_exists.html" with label="Adresse" value=programme.adresse %}
                                     {% include "common/display_field_if_exists.html" with label="Code postal" value=programme.code_postal %}
                                     {% include "common/display_field_if_exists.html" with label="Ville" value=programme.ville %}
-                                    {% include "common/display_field_if_exists.html" with label="Nombre de logements" value=lot.nb_logements %}
                                     {% include "common/display_field_if_exists.html" with label="ANRU" value=programme.anru %}
                                     {% include "common/display_field_if_exists.html" with label="Type d'habitat" value=programme.get_type_habitat_display %}
                                     {% include "common/display_field_if_exists.html" with label="Type d'opération" value=programme.get_type_operation_display %}
@@ -200,29 +199,50 @@
                                                         <td>
                                                             {{ logement.typologie }}
                                                         </td>
-                                                        <td>
-                                                            {{ logement.surface_habitable }}
+                                                        <td id="lgt_sh">
+                                                            {{ logement.surface_habitable|floatformat:2 }}
+                                                        </td>
+                                                        <td id="lgt_sa">
+                                                            {{ logement.surface_annexes|floatformat:2 }}
+                                                        </td>
+                                                        <td id="lgt_sar">
+                                                            {{ logement.surface_annexes_retenue|floatformat:2 }}
+                                                        </td>
+                                                        <td id="lgt_su">
+                                                            {{ logement.surface_utile|floatformat:2 }}
                                                         </td>
                                                         <td>
-                                                            {{ logement.surface_annexes }}
+                                                            {{ logement.loyer_par_metre_carre|floatformat:2 }}
                                                         </td>
                                                         <td>
-                                                            {{ logement.surface_annexes_retenue }}
+                                                            {{ logement.coeficient|floatformat:3 }}
                                                         </td>
-                                                        <td>
-                                                            {{ logement.surface_utile }}
-                                                        </td>
-                                                        <td>
-                                                            {{ logement.loyer_par_metre_carre }}
-                                                        </td>
-                                                        <td>
-                                                            {{ logement.coeficient }}
-                                                        </td>
-                                                        <td>
-                                                            {{ logement.loyer }}
+                                                        <td id="lgt_loyer">
+                                                            {{ logement.loyer|floatformat:2 }}
                                                         </td>
                                                     </tr>
                                                 {% endfor %}
+                                                <tr>
+                                                    <td class="fr-text--lg">
+                                                        Total
+                                                    </td>
+                                                    <td>
+                                                    </td>
+                                                    <td id="total_sh" class="fr-text--lg">
+                                                    </td>
+                                                    <td id="total_sa" class="fr-text--lg">
+                                                    </td>
+                                                    <td id="total_sar" class="fr-text--lg">
+                                                    </td>
+                                                    <td id="total_su" class="fr-text--lg">
+                                                    </td>
+                                                    <td>
+                                                    </td>
+                                                    <td>
+                                                    </td>
+                                                    <td id="total_loyer" class="fr-text--lg">
+                                                    </td>
+                                                </tr>
                                             </tbody>
                                         </table>
                                     </div>
@@ -333,7 +353,7 @@
             <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
                 {% if request.user.is_bailleur %}
                     {% if convention.is_bailleur_editable %}
-                        {% include "common/button/precedent.html" with precedent='conventions:step9' convention_uuid=convention.uuid %}
+                        {% include "common/button/precedent.html" with precedent='conventions:comments' convention_uuid=convention.uuid %}
                         <div>
                             <form method="post" action="" enctype="multipart/form-data">
                                 {% csrf_token %}
@@ -351,7 +371,7 @@
                 {% endif %}
                 {% if request.user.is_instructeur %}
                     {% if convention.is_instructeur_editable %}
-                        {% include "common/button/precedent.html" with precedent='conventions:step9' convention_uuid=convention.uuid %}
+                        {% include "common/button/precedent.html" with precedent='conventions:comments' convention_uuid=convention.uuid %}
                         <div>
                             <form method="post" action="{% url 'conventions:generate_convention' convention_uuid=convention.uuid %}" enctype="multipart/form-data">
                                 {% csrf_token %}
@@ -368,4 +388,21 @@
 
         </div>
     </div>
+
+    <script  type="text/javascript">
+        function compute_total_value(what){
+            elements = document.querySelectorAll('[id=lgt_' + what + ']');
+            total_value = 0;
+            for ( i =0, len = elements.length; i<len; i++) {
+                total_value = total_value + parseFloat(elements[i].innerHTML);
+            }
+            document.getElementById('total_' + what).innerHTML = "<span>" + total_value.toFixed(2).replace('.',',').replace(/\B(?=(\d{3})+(?!\d))/g, " ") + "</span>";
+        }
+        compute_total_value('sh')
+        compute_total_value('sa')
+        compute_total_value('sar')
+        compute_total_value('su')
+        compute_total_value('loyer')
+    </script>
+
 {% endblock %}
