--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -7,7 +7,7 @@
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-                        <h2 class="fr-mb-3w">Etape 1/{{ nb_steps }} - Choix du programme à conventionner</h2>
+                        <h2 class="fr-mb-3w">Etape {{convention_form_step}}/{{ nb_steps }} - Choix du programme à conventionner</h2>
                         {% include "common/mandatory_fields_info.html" %}
                         <p class="fr-mb-3w">
                             <div class="fr-select-group {% if form.lot_uuid.errors %}fr-select-group--error{% endif %}">
@@ -38,7 +38,7 @@
                     <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
                         Revenir à l'étape précédente
                     </a>
-                    {% include "common/button/suivant_submit.html" with suivant='conventions:step2' %}
+                    {% include "common/button/suivant_submit.html" with suivant='conventions:bailleur' %}
                 </div>
             </form>
         </div>
